--- a/styles/style.css
+++ b/styles/style.css
@@ -829,27 +829,43 @@ h2 {
 
 .second-column {
     margin-top: 20px;
-    width: 300px;
+    width: 250px;
     display: flex;
     flex-direction: column;
     margin-right: 50px;
 }
 
-.foter-big-header {
-    font-size: 40px;
-    font-weight: bold;
+.second-column-header {
+    font-size: 24px;
+    margin-top: 15px;
 }
 
 .footer-email {
-    font-size: 24px;
-    margin-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration-line: underline;
+    margin-left: 6px;
+    margin-top: 15px;
+}
+
+.footer-adress {
+    font-size: 20px;
+    width: 371px;
+    margin-top: 26px;
+    margin-left: 6px;
+}
+
+.footer-telephone {
+    font-size: 20px;
+    margin-top: 5px;
+    margin-left: 6px;
 }
 
 .input-footer {
     outline: 1px solid #ffde41;
     border: 1px solid black;
     border-width: 0 0 1px 0;
-    margin-top: 10px;
+    margin-top: 12px;
     box-sizing: border-box;
     padding: 5px;
     background-color: #ffde41;
@@ -861,7 +877,7 @@ h2 {
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.8);
     text-align: center;
-    margin-top: 2%;
+    margin-top: 20px;
     cursor: pointer;
     font-weight: bold;
 }
@@ -1605,18 +1621,25 @@ th {
 
     .footer {
         flex-direction: column;
+        width: 100%;
     }
 
     .first-column {
         margin-left: 15px;
     }
 
+    .footer-email {
+        margin-left: 0px;
+    }
+
     .footer-adress {
         font-size: 12px;
+        margin-left: 0px;
     }
 
     .footer-telephone {
         font-size: 12px;
+        margin-left: 0px;
     }
 
     .second-column {
@@ -1855,22 +1878,29 @@ th {
 
     .footer {
         flex-direction: column;
+        width: 100%;
     }
 
     .first-column {
         margin-left: 20px;
     }
 
+    .footer-email {
+        margin-left: 0px;
+    }
+
     .footer-adress {
         font-size: 16px;
+        margin-left: 0px;
     }
 
     .footer-telephone {
         font-size: 16px;
+        margin-left: 0px;
     }
 
     .second-column {
-        width: 300px;
+        width: 250px;
         margin-left: 20px;
     }
 }
@@ -2010,6 +2040,7 @@ th {
 
     .footer {
         flex-direction: column;
+        width: 100%;
     }
 
     .first-column {
@@ -2025,8 +2056,8 @@ th {
     }
 
     .second-column {
-        width: 350px;
-        margin-left: 35px;
+        width: 300px;
+        margin-left: 40px;
     }
 
     /* tarrifs */
@@ -2076,6 +2107,10 @@ th {
 
     .info-container-top-text {
         display: flex;
+        flex-direction: row;
+    }
+
+    .footer {
         flex-direction: row;
     }
 }
