--- a/styles/style.css
+++ b/styles/style.css
@@ -384,15 +384,21 @@ h2 {
 .benefits-container {
   display: flex;
   justify-content: space-around;
+  width: 90%;
+  margin: auto;
   padding-bottom: 100px;
 }
 
 .benefits-column-first {
+  width: 50%;
+  padding-right: 10px;
   display: flex;
   flex-direction: column;
 }
 
 .benefits-column-second {
+  width: 50%;
+  padding-left: 10px;
   display: flex;
   flex-direction: column;
 }
@@ -2307,5 +2313,17 @@ th {
 
   .footer {
     width: 100%;
+  }
+}
+
+@media screen and (min-width: 690px) {
+  .benefits-text-p {
+    width: 200px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .benefits-text-p {
+    width: 300px;
   }
 }
