--- a/styles/style.css
+++ b/styles/style.css
@@ -411,6 +411,7 @@ h2 {
 .benefits-text-p {
   font-size: 24px;
   line-height: 140%;
+  width: 300px;
 }
 
 .benefits-img {
@@ -1334,8 +1335,8 @@ th {
   .benefits-container {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     margin-left: 20px;
-    width: 100%;
   }
 }
 
@@ -1363,8 +1364,8 @@ th {
   .benefits-container {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     margin-left: 20px;
-    width: 100%;
   }
 }
 
@@ -1435,7 +1436,6 @@ th {
     display: flex;
     flex-direction: column;
     margin-left: 5%;
-    width: 100%;
   }
 }
 
@@ -1697,13 +1697,13 @@ th {
   .benefits-container {
     display: flex;
     flex-direction: column;
-    margin-left: 20%;
+    align-items: flex-start;
+    margin-left: 1%;
   }
 
   .benefits-text-p {
     font-size: 16px;
     line-height: 140%;
-    width: 300px;
   }
 
   .benefits-column-first {
@@ -2023,14 +2023,13 @@ th {
   .benefits-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     margin-left: 10%;
   }
 
   .benefits-text-p {
     font-size: 16px;
     line-height: 140%;
-    width: 100%;
   }
 
   .benefits-column-first {
@@ -2282,6 +2281,7 @@ th {
   .benefits-container {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     margin-left: 20px;
     width: 100%;
   }
@@ -2401,15 +2401,5 @@ th {
 
   .footer {
     width: 100%;
-  }
-
-  .benefits-text-p {
-    width: 300px;
-  }
-}
-
-@media screen and (min-width: 960px) {
-  .benefits-text-p {
-    width: 300px;
   }
 }
